--- a/client/main.html
+++ b/client/main.html
@@ -1,6 +1,8 @@
 <head>
   <title>Meteor Boilerplate</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1"/>
+  <link rel="icon" type="image/png" href="favicon.png" />
+
 </head>
 
 <body>
